# tf-rmm

./: README.md
.github/workflows/: opencca-build.yml
configs/: rk3588_defcfg.cmake
drivers/16550/: CMakeLists.txt  readme.md
drivers/16550/include/: uart_16550.h
drivers/16550/src/: 16550_console.S
drivers/16550/src/include/: console_assertions.h  console_macros.S  uart_console.h  utils_def.h
lib/: CMakeLists.txt
lib/arch/: CMakeLists.txt
lib/arch/include/: arch.h  arch_features.h  arch_helpers.h
lib/arch/include/aarch64/: entropy.h
lib/arch/src/: pauth.c
lib/arch/src/aarch64/: cache_helpers.S
lib/debug/include/: debug.h
lib/granule/src/: granule.c
lib/measurement/src/: measurement.c
lib/opencca/: CMakeLists.txt
lib/opencca/include/: opencca.h  opencca_debug.h
lib/s2tt/src/: s2tt_pvt_defs.h
lib/slot_buf/src/: buffer.c
lib/xlat/include/: xlat_defs.h  xlat_tables.h
lib/xlat/src/: xlat_high_va.c  xlat_tables_arch.c  xlat_tables_core.c  xlat_tables_utils.c
plat/rk3588/: CMakeLists.txt
plat/rk3588/src/: rk3588_granule.c  rk3588_memory.c  rk3588_setup.c
plat/rk3588/src/include/: arm_dram.h
runtime/: CMakeLists.txt
runtime/core/: opencca_fwb.c  opencca_timers.c  run.c  sysregs.c
runtime/rmi/: feature.c  granule.c  rec.c
toolchains/aarch64/: common_aarch64.cmake
